Changes file path. Back to routes.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://karolhas.github.io/CV",
+  "homepage": "http://karolhas.github.io/cv",
   "name": "cv",
   "private": false,
   "version": "0.0.0",
