--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.6",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "vite-plugin-fonts": "^0.7.0"
   }
 }
