--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "i18next": "^23.3.0",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-http-backend": "^2.2.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.0.2",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
     "react-router-hash-link": "^2.4.3",
